Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_Line__c/SMAX_PS_Service_Alert_Line__c.object-meta.xml
<CustomObject>
    <label>Service Alert Line</label>
    <nameField>
        <displayFormat>SAL-{0000000000}</displayFormat>
        <label>Service Alert Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Alert Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>