Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_Line__c/fields/BD_Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>BD_Work_Performed__c</fullName>
    <label>Work Performed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>