Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_Line__c/fields/SMAX_PS_Number_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Number_of_Hours__c</fullName>
    <description>ITSVMX-1507 Used by Tech Support to log time to request</description>
    <label>Number of Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>