Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_Line__c/fields/SMAX_PS_User__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ITSVMX-1507 Used by Tech Support to log time to request</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Alert_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>